# GLFR

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/demo/: demo.cc
include/GLFR/: color.hh  light.hh  material.hh  mesh.hh  renderer.hh  shader.hh  texture2d.hh
src/: color.cc  config.hh.in  default_meshes.hh  default_shaders.hh  main.cc  material.cc  mesh.cc  renderer.cc  shader.cc  texture2d.cc
